# ou_self_drive_ros

./: .gitmodules  .travis.yml
gem_speed_control/: CMakeLists.txt  package.xml
gem_speed_control/cfg/: SpeedControl.cfg
gem_speed_control/src/: GemSpeedControl.BAK  GemSpeedControl.cpp  GemSpeedControl.h  gem_speed_control.cpp
gps_kalman_filter/: CMakeLists.txt
joytest/: CMakeLists.txt
joytest/arduino/comfirmed program/: upload.sh
joytest/arduino/speed_measure6/: speed_measure6.ino
joytest/arduino/speed_measure8/: speed_measure8.ino
joytest/config/: 70-sensors.rules
joytest/launch/: joy_test4.launch  joy_test5.launch
joytest/scripts/: color_vel.py  gray_line.py  joy_test3.py  line_point.py  unit_test1to3.py
lane_detection/: package.xml
lane_detection/launch/: test_projection.launch
lane_detection/src/: LaneDetection.cpp  LaneDetection.h
lidar_stop_trigger/src/: LidarStopTrigger.cpp  LidarStopTrigger.h
path_planning/: CMakeLists.txt  package.xml
path_planning/src/: PathPlanning.cpp  PathPlanning.h  path_planning.cpp
perception/: CMakeLists.txt  package.xml
perception/src/: Perception.cpp  Perception.h  PointMap.cpp  PointMap.hpp  PointMapCell.cpp  PointMapCell.hpp
radar/: CMakeLists.txt  package.xml
radar/ReadRADAR/: RADARDetection.py  RADARMessageProcessor.py  main.py
radar/msg/: radar_detection.msg  radar_detections.msg
radar/radar/: RADARMessageProcessor.py  RADARNode  RADARTransform
radar/visualize/: main.py
self_drive_launch/config/: cepton_transforms.json
self_drive_launch/launch/: cepton_sensors.launch  yolo.launch
yolo/: CMakeLists.txt  package.xml
yolo/src/: YOLO.cpp  YOLO.h  YOLONode.cpp  YOLONode.h  yolo_node.cpp
