<?xml version="1.0"?>
<package format="2">
  <name>gem_speed_control</name>
  <version>0.0.0</version>
  <description>
    Speed control of the GEM for IGVC 2019
  </description>
  <maintainer email="abc@TODO.com">ABC</maintainer>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
</package>
