<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>0.0.1</version>
  <description>
    Nightmare Path Planning
  </description>
  <maintainer email="johnbrooks@oakland.edu">abc</maintainer>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
