<?xml version="1.0"?>
<package format="2">
  <name>radar</name>
  <version>0.0.1</version>
  <description>
    RADAR driver node
  </description>
  <maintainer email="jbrooks@oakland.edu">John Brooks</maintainer>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
